--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,14 +1,111 @@
 {
-  "About": "Обо мне",
-  "Skills": "Навыки",
-  "Experience": "Опыт",
-  "Projects": "Проекты",
-  "Contact": "Контакты",
-  "Full Name": "Полное имя",
-  "Email Address": "Электронная почта",
-  "Message": "Сообщение",
-  "Send Message": "Отправить сообщение",
-  "Sending...": "Отправка...",
-  "Get In Touch": "Свяжитесь со мной",
-  "Contact Information": "Контактная информация"
+  "header": {
+    "nav": {
+      "home": "Главная",
+      "skills": "Навыки",
+      "experience": "Опыт",
+      "projects": "Проекты",
+      "contact": "Контакты"
+    },
+    "admin": {
+      "manageProjects": "Управление проектами",
+      "manageSkills": "Управление навыками",
+      "manageExperience": "Управление опытом",
+      "manageHero": "Управление главной",
+      "adminMessages": "Сообщения администратора",
+      "manageContact": "Управление контактами",
+      "publicProjects": "↳ Публичные проекты",
+      "publicSkills": "↳ Публичные навыки",
+      "panel": "Панель администратора",
+      "manageTitle": "Управление",
+      "previewTitle": "Просмотр"
+    },
+    "logout": "Выйти"
+  },
+  "footer": {
+    "copy": "© {{year}} {{name}}. Все права защищены."
+  },
+  "themeToggle": { "aria": "Переключить тему" },
+  "contactForm": {
+    "fullName": "Полное имя",
+    "email": "Электронная почта",
+    "message": "Сообщение",
+    "send": "Отправить сообщение",
+    "sending": "Отправка...",
+    "toast": {
+      "success": "📨 Сообщение успешно отправлено!",
+      "error": "❌ Не удалось отправить сообщение"
+    },
+    "errors": {
+      "fullName": "Полное имя обязательно",
+      "email": "Электронная почта обязательна",
+      "message": "Сообщение обязательно"
+    }
+  },
+  "login": {
+    "success": "✅ Вход выполнен успешно!",
+    "error": "❌ Ошибка входа. Проверьте данные.",
+    "title": "Вход администратора",
+    "email": "Электронная почта",
+    "password": "Пароль",
+    "errors": {
+      "email": "Электронная почта обязательна",
+      "password": "Пароль обязателен"
+    },
+    "loading": "Вход...",
+    "submit": "Войти"
+  },
+  "contactPage": {
+    "phone": "Телефон",
+    "email": "Электронная почта",
+    "location": "Адрес",
+    "telegram": "Телеграм",
+    "github": "Гитхаб",
+    "linkedin": "Линкедин",
+    "title": "Связаться 📨",
+    "subtitle": "Я всегда открыт к обсуждению новых проектов, креативных идей и возможностей.",
+    "details": "Контактная информация",
+    "collapseAll": "Свернуть всё",
+    "expandAll": "Развернуть всё",
+    "loading": "Загрузка контактной информации...",
+    "failed": "Не удалось загрузить контактную информацию."
+  },
+  "hero": {
+    "viewProjects": "Посмотреть проекты",
+    "contactMe": "Связаться со мной"
+  },
+  "about": {
+    "title": "Обо мне"
+  },
+  "skills": {
+    "title": "Мой технический арсенал",
+    "loading": "Загрузка навыков...",
+    "hard": "Профессиональные навыки",
+    "soft": "Мягкие навыки",
+    "languages": "Языки"
+  },
+  "experience": {
+    "title": "Карьера и образование",
+    "loading": "Загрузка опыта...",
+    "untitled": "Без названия",
+    "unknownCompany": "Неизвестная компания",
+    "noDescription": "Описание отсутствует."
+  },
+  "projects": {
+    "loading": "Загрузка проектов...",
+    "error": "Не удалось загрузить проекты.",
+    "title": "Избранные проекты",
+    "liveDemo": "Демо версия",
+    "github": "Гитхаб",
+    "techStack": "Технологический стек"
+  },
+  "contactSection": {
+    "loading": "Загрузка...",
+    "title": "📬 Связаться со мной",
+    "information": "Контактные данные",
+    "description": "Открыт для сотрудничества и интересных задач на бэкенде. Давайте создадим что-то полезное вместе!"
+  },
+  "protected": {
+    "checking": "Проверка доступа..."
+  }
 }
