--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -107,6 +107,136 @@
     "description": "我愿意参与有意义的合作与令人兴奋的后端机会。让我们一起创造影响力！",
     "techStack": "技术栈"
   },
+  "form": {
+    "save": "保存",
+    "saveChanges": "保存更改",
+    "saving": "正在保存...",
+    "cancel": "取消",
+    "delete": "删除",
+    "create": "创建",
+    "update": "更新",
+    "edit": "编辑",
+    "reset": "重置"
+  },
+  "toast": {
+    "success": "✅ 成功！",
+    "error": "❌ 出现错误"
+  },
+  "admin": {
+    "projects": {
+      "title": "🚀 管理项目",
+      "add": "➕ 添加项目",
+      "edit": "✏️ 编辑项目",
+      "new": "🆕 新项目",
+      "loading": "正在加载项目...",
+      "error": "❌ 加载项目失败。",
+      "empty": "暂无项目。",
+      "imageNotFound": "未找到图像",
+      "noDescription": "暂无描述。",
+      "confirmDelete": "🗑️ 确定要删除此项目？",
+      "toast": {
+        "created": "✅ 项目已创建！",
+        "createError": "❌ 创建失败",
+        "updated": "✏️ 项目已更新！",
+        "updateError": "❌ 更新失败",
+        "deleted": "🗑️ 已删除",
+        "deleteError": "❌ 删除失败"
+      }
+    },
+    "skills": {
+      "title": "管理技能",
+      "editSkill": "编辑技能",
+      "newSkill": "添加新技能",
+      "category": "类别",
+      "name": "名称",
+      "icon": "图标",
+      "level": "等级",
+      "namePlaceholder": "例如：React",
+      "iconPlaceholder": "选择一个图标...",
+      "levelPlaceholder": "例如：B2",
+      "table": {
+        "skill": "技能",
+        "category": "类别",
+        "level": "等级",
+        "actions": "操作"
+      },
+      "loading": "加载中...",
+      "confirmDelete": "确定要删除此技能？",
+      "toast": {
+        "created": "技能创建成功！",
+        "createError": "创建技能失败",
+        "updated": "技能更新成功！",
+        "updateError": "更新技能失败",
+        "deleted": "技能已删除！",
+        "deleteError": "删除技能失败"
+      }
+    },
+    "experience": {
+      "title": "管理经历",
+      "present": "至今",
+      "placeholders": {
+        "title": "职位名称",
+        "company": "公司",
+        "start": "开始日期（例如：2023年1月）",
+        "end": "结束日期（或留空）",
+        "icon": "输入图标名称（例如：FaBriefcase）",
+        "description": "描述"
+      }
+    },
+    "hero": {
+      "loading": "加载中...",
+      "error": "❌ 加载 hero 数据失败",
+      "add": "➕ 添加 Hero",
+      "edit": "✏️ 编辑 Hero",
+      "editTitle": "✏️ 编辑 Hero 区域",
+      "newTitle": "➕ 创建 Hero 区域",
+      "name": "姓名",
+      "tagline": "标语",
+      "technologies": "技术（逗号分隔）",
+      "confirmDelete": "⚠️ 确定删除此 Hero？",
+      "delete": "🗑️ 删除 Hero",
+      "toast": {
+        "created": "✅ Hero 创建成功",
+        "createError": "❌ 创建失败",
+        "updated": "✅ Hero 更新成功",
+        "updateError": "❌ 更新失败",
+        "deleted": "🗑️ Hero 已删除",
+        "deleteError": "❌ 删除失败"
+      }
+    },
+    "messages": {
+      "title": "📨 联系消息",
+      "loading": "加载中...",
+      "error": "❌ 加载消息失败",
+      "noMessages": "还没有收到任何消息。",
+      "confirmDelete": "❌ 删除此消息？"
+    },
+    "contact": {
+      "loading": "⏳ 正在加载联系信息...",
+      "notFound": "⚠️ 未找到联系信息。你可以在下方添加：",
+      "add": "➕ 添加联系信息",
+      "title": "📇 编辑联系信息",
+      "placeholders": {
+        "phone": "输入电话号码",
+        "email": "输入电子邮箱地址",
+        "location": "输入所在位置",
+        "github": "https://github.com/你的用户名",
+        "telegram": "https://t.me/你的用户名",
+        "linkedin": "https://linkedin.com/in/你的用户名"
+      },
+      "reset": "🧹 重置为上次保存",
+      "confirmDelete": "确定要删除联系信息？",
+      "toast": {
+        "created": "✅ 联系信息已创建",
+        "createError": "❌ 创建失败",
+        "updated": "✅ 联系信息已更新",
+        "updateError": "❌ 更新失败",
+        "deleted": "🗑️ 联系信息已删除",
+        "deleteError": "❌ 删除失败",
+        "noValid": "❌ 无法更新：未找到有效信息"
+      }
+    }
+  },
   "protected": {
     "checking": "正在检查访问权限..."
   }
